@@ -173,6 +173,8 @@ using namespace std;
 #define VWUP2_CHG_DC_I                  0x41F9
 
 #define VWUP_CHG_MGMT_SOC_NORM          0x1DD0
+#define VWUP_CHG_MGMT_SOC_LIMITS        0x1DD1    // Minimum & maximum SOC
+#define VWUP_CHG_MGMT_TIMER_DEF         0x1DD4    // Scheduled charge configured
 #define VWUP_CHG_MGMT_HV_CHGMODE        0x1DD6    // High voltage charge mode
 #define VWUP_CHG_MGMT_REM               0x1DE4    // remaining time for full charge
 #define VWUP_CHG_MGMT_LV_PWRSTATE       0x1DEC    // Low voltage (12V) systems power state
